--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 	<!-- The header section includes the site logo and nav button. -->
 	<header>
 		<a href="index.html">
-		<img class="headerimage" src="images/CMYKlogo.png" alt="colorful version of the logo"></a>
+		<img class="headerimage" src="images/cmyklogo.png" alt="colorful version of the logo"></a>
 		Portfolio
 	</header>
 	<!-- the main section-->
