--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 			<div class="overlay"></div>
 			<ul>
 				<li><a href="index.html">About</a></li>
-				<li><a href="Portfolio.html">Portfolio</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="#">Store</a></li>
 				<Li><a href="#">Contact</a></Li>
 			</ul>
